Fix memcpy() call for big endian https://bugs.webkit.org/show_bug.cgi?id=197945

Patch by Eike Rathke <erack@redhat.com> on 2019-05-16
Reviewed by Michael Catanzaro.

* wtf/Packed.h:
(WTF::alignof):

Canonical link: https://commits.webkit.org/212070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245395 268f45cc-cd09-0410-ab3c-d52691b4dbfc